# mizu

./: Cargo.toml  README.md  build_instructions.md  contract.ml  default-config.json  mizu.ml  technical_details.md  threat_model.md
.github/workflows/: ci.yml
docs/: build_instructions.md  future_considerations.md  technical_details.md  why_not.md
mizu-crypto/: Cargo.toml
mizu-crypto/src/: error.rs  keys.rs  lib.rs  x3dh.rs
mizu-driver/: Cargo.toml
mizu-driver/src/: contract.rs  faucet.rs  lib.rs  main.rs
mizu-sqlite/: Cargo.toml
mizu-sqlite/migrations/2020-06-16-100417_initial/: down.sql  up.sql
mizu-sqlite/src/: client.rs  contact.rs  identity.rs  lib.rs  message.rs  schema.rs
mizu-tezos/: Cargo.toml
mizu-tezos-interface/: Cargo.toml
mizu-tezos-interface/src/: lib.rs
mizu-tezos-mock/: Cargo.toml
mizu-tezos-mock/migrations/2020-06-17-013029_initial/: down.sql
mizu-tezos-mock/src/: lib.rs  message.rs  poke.rs  schema.rs  user.rs
mizu-tezos-rpc/: Cargo.toml
mizu-tezos-rpc/src/: crypto.rs  lib.rs
mizu-tezos/src/: crypto.rs  helper.rs  main.rs  michelson.rs
mizu-tui/: Cargo.toml  default-theme.toml
mizu-tui/src/: main.rs
mizu-tui/tests/: alice.json  bob.json  chris.json  mizu.db  mock.db
src/: double_ratchet.rs  error.rs  keys.rs  lib.rs  x3dh.rs
tezos-interface/: Cargo.toml
tezos-interface/src/: lib.rs
tezos-mock/: Cargo.toml
tezos-mock/migrations/2020-06-17-013029_initial/: up.sql
tezos-mock/src/: lib.rs  message.rs  schema.rs  user.rs
