[package]
name = "mizu"
version = "0.0.1"
authors = ["mt-caret <mtakeda.enigsol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
x25519-dalek = { version = "0.6.0", features = ["serde"]}
sha2 = "0.8.2"
hkdf = "0.8.0"
hmac = "0.7.1"
aes-gcm = "0.5.0"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
