[package]
name = "mizu-sqlite"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
mizu-crypto = { path = "../mizu-crypto" }
bincode = "1.2.1"
