[package]
name = "mizu-tezos"
version = "0.1.0"
authors = ["mt-caret <mtakeda.enigsol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.2.0", features = [ "json" ] }
url = "2.1.1"
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.4.0"
num-bigint = { version = "0.3", features = [ "serde" ] }
num-traits = "0.2"
hex = "0.4.2"

# TODO: crate with little usage, should check for issues
base58check = "0.1.0"

# The latest version of blake2 is 0.9.1, but have incompatible versions of
# digest with ed25519-dalek
blake2 = "0.9.0"
digest = "0.9.0"

# Ideally, we would use ed25519-dalek here given how large ring is, but the
# crate does not support signing non-64 byte digests :(
signatory-ring = "0.20.0"
signature = "1.1.0"
