[package]
name = "mizu-tezos"
version = "0.1.0"
authors = ["Masayuki Takeda <mtakeda.enigsol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.2.0", features = [ "json" ] }
url = "2.1.1"
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.4.0"
num-bigint = { version = "0.3", features = [ "serde" ] }
hex = "0.4.2"
