[package]
name = "mizu-tezos"
version = "0.1.0"
authors = ["Masayuki Takeda <mtakeda.enigsol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.2.0", features = [ "json" ] }
url = "2.1.1"
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.4.0"
num-bigint = { version = "0.3", features = [ "serde" ] }
hex = "0.4.2"
ed25519-dalek = "0.9.1"

# this is required for ed25519-dalek (https://github.com/dalek-cryptography/ed25519-dalek/issues/89)
rand = "0.6"

# TODO: crate with little usage, should check for issues
base58check = "0.1.0"

# The latest version of blake2 is 0.9.1, but have incompatible versions of
# digest with ed25519-dalek
blake2 = "0.8"
