[package]
name = "mizu-tui"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.15.0", default-features = false, features = ["crossterm-backend"] }
mizu-driver = { path = "../mizu-driver" }
gumdrop = "0.8.0"
