[package]
name = "mizu-tui"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.15.0", default-features = false, features = ["ncurses-backend", "toml"] }
mizu-driver = { path = "../mizu-driver" }
mizu-sqlite = { path = "../mizu-sqlite" }
mizu-tezos-mock = { path = "../mizu-tezos-mock" }
structopt = "0.3.15"
chrono = "0.4.11"
serde = "1.0.114"
serde_json = "1.0.55"
rand = "0.7.3"
diesel = { version = "1.4.5", features = ["chrono", "sqlite"] }
mizu-tezos-interface = { path = "../mizu-tezos-interface" }
mizu-tezos-rpc = { path = "../mizu-tezos-rpc" }
url = "2.1.1"
log = "0.4"
