[package]
name = "tezos-mock"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["chrono", "sqlite"] }
tezos-interface = { path = "../tezos-interface" }
chrono = "0.4.11"
